fix whitespace

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,7 @@
 }
 
 .navbar {
+	margin-top: 30px;
 	.navbar-end {
 		margin-right: 100px;
 	}
